force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>