force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/CodigoDeProducto__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeProducto__c</fullName>
    <label>Código de producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>