force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/CreadoDesdePedidoLineItem__c.field-meta.xml
<CustomField>
    <fullName>CreadoDesdePedidoLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado desde Pedido Line Item</label>
    <referenceTo>PedidoLineItem__c</referenceTo>
    <relationshipLabel>Items de Factura de Cliente</relationshipLabel>
    <relationshipName>ItemsDeFacturaDeCliente</relationshipName>
    <type>Lookup</type>
</CustomField>