force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <referenceTo>FacturaDeCliente__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>ItemsDeFacturaDeCliente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>