force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/MarcaDeProducto__c.field-meta.xml
<CustomField>
    <fullName>MarcaDeProducto__c</fullName>
    <label>Marca de producto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>