force-app/main/default/objects/ItemDeFacturaDeCliente__c/fields/PrecioDeVenta__c.field-meta.xml
<CustomField>
    <fullName>PrecioDeVenta__c</fullName>
    <label>Precio de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>